Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-8547

get_json_object fails to get value for numeric key

    XMLWordPrintableJSON

Details

    • ghx-label-7

    Description

      select get_json_object('{"1": 5}', '$.1');
      

      returns error:
       

      "Expected key at position 2"
      

       
      I guess it's caused by using function FindEndOfIdentifier that expects first symbol of key to be a letter.
      Hive version of get_json_object works fine in this case.

      Attachments

        Activity

          People

            undefz Eugene Zimichev
            undefz Eugene Zimichev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: